# ZinoEngineOld

./: .gitignore  .gitmodules  BUILDING.md  BuildLibs  BuildLibs.bat  CMakeLists.txt  ClearLibs.bat  CopyDLLs.bat  CopyLibs  GenerateLinuxClang  GenerateVS2019.bat  LICENSE  README.md  ZinoEngine.sln  imgui - Copie.ini  imgui.ini  x64.lnk
Sources/: CMakeLists.txt  premake5.lua
Sources/Editor/: CMakeLists.txt
Sources/Editor/AssetActions/: CMakeLists.txt
Sources/Editor/AssetCache/: CMakeLists.txt
Sources/Editor/AssetDataCache/: CMakeLists.txt
Sources/Editor/AssetExplorer/: CMakeLists.txt
Sources/Editor/AssetUtils/: CMakeLists.txt
Sources/Editor/MapEditor/: CMakeLists.txt
Sources/Editor/NotificationSystem/: CMakeLists.txt
Sources/Editor/NotificationSystem/Private/: NotificationSystem.cpp
Sources/Editor/PropertyEditor/: CMakeLists.txt
Sources/Editor/QtAdvancedDockingSystem/: CMakeLists.txt
Sources/Editor/SDFFontGen/: CMakeLists.txt
Sources/Editor/SDFFontGen/Private/: SDFFontGen.cpp
Sources/Editor/SDFFontGen/Public/: SDFFontGen.h
Sources/Editor/TextureCompressor/: CMakeLists.txt
Sources/Editor/TextureCompressor/Private/: TextureCompressor.cpp
Sources/Editor/TextureCompressor/Public/: TextureCompressor.h
Sources/Editor/ZEEditor/: CMakeLists.txt
Sources/Editor/ZEEditor/Assets/: Style.qss  ZEEditor.qrc
Sources/Engine/: CMakeLists.txt
Sources/Engine/Base/: CMakeLists.txt
Sources/Engine/Base/Asset/: CMakeLists.txt
Sources/Engine/Base/AssetDatabase/: CMakeLists.txt
Sources/Engine/Base/Core/: CMakeLists.txt
Sources/Engine/Base/Engine/: CMakeLists.txt
Sources/Engine/Base/JsonSerialization/: CMakeLists.txt
Sources/Engine/Base/Platform/: CMakeLists.txt
Sources/Engine/Base/PlatformWindows/: CMakeLists.txt
Sources/Engine/Base/Reflection/: CMakeLists.txt
Sources/Engine/Base/ZEFS/: CMakeLists.txt
Sources/Engine/Core/: ReflectionCore.cpp  ReflectionCore.h
Sources/Engine/Core/ECS/: premake5.lua
Sources/Engine/Core/Engine/: Engine.lua  premake5.lua
Sources/Engine/Core/EngineCore/: EngineCore.lua  premake5.lua
Sources/Engine/Core/Main/: Main.lua  premake5.lua
Sources/Engine/Core/Reflection/: Reflection.lua  premake5.lua
Sources/Engine/Editor/MapEditor/: MapEditor.lua
Sources/Engine/Editor/ZEEditor/: Editor.lua
Sources/Engine/Main/: CMakeLists.txt  Main.lua
Sources/Engine/Main/Private/: Main.cpp
Sources/Engine/Render/: CMakeLists.txt
Sources/Engine/Render/EffectSystem/: CMakeLists.txt
Sources/Engine/Render/Gfx/: CMakeLists.txt
Sources/Engine/Render/GfxBackend/: CMakeLists.txt
Sources/Engine/Render/GfxCore/: CMakeLists.txt
Sources/Engine/Render/ImGui/: CMakeLists.txt  ImGui.lua
Sources/Engine/Render/RenderCore/: CMakeLists.txt  RenderCore.lua  premake5.lua
Sources/Engine/Render/RenderSystem/: CMakeLists.txt  RenderSystem.lua  premake5.lua
Sources/Engine/Render/Renderer/: CMakeLists.txt  Renderer.lua  premake5.lua
Sources/Engine/Render/ShaderCompiler/: CMakeLists.txt  ShaderCompiler.lua  premake5.lua
Sources/Engine/Render/ShaderCore/: CMakeLists.txt  ShaderCore.lua  premake5.lua
Sources/Engine/Render/Shaders/: Shaders.lua  premake5.lua
Sources/Engine/Render/VulkanBackend/: CMakeLists.txt
Sources/Engine/Render/VulkanRenderSystem/: CMakeLists.txt  VulkanRenderSystem.lua  premake5.lua
Sources/Engine/Render/VulkanShaderCompiler/: CMakeLists.txt  VulkanShaderCompiler.lua  premake5.lua
Sources/Engine/Render/ZEUI/: CMakeLists.txt
Sources/Engine/Tools/ZinoReflectionTool/: ZinoReflectionTool.lua
Sources/Engine/effect/: CMakeLists.txt
Sources/Engine/json/: CMakeLists.txt
Sources/Engine/vulkangfx/private/: Command.cpp  Command.h  RenderPass.h  Sampler.cpp  Sampler.h  Shader.h  Surface.cpp  Vulkan.h  VulkanBackend.cpp
Sources/Libs/SDL2/: CMakeLists.txt
Sources/Libs/SDL2/docs/: README-android.md
Sources/Libs/glslang/lib/: OGLCompilerd.lib  OSDependentd.lib
Sources/Libs/shaderc/lib/: shaderc_utild.lib  shadercd.lib
Sources/Libs/spirv-cross/lib/: spirv-cross-cd.lib  spirv-cross-cpp.lib  spirv-cross-cppd.lib  spirv-cross-utild.lib
Sources/Tools/: CMakeLists.txt
Sources/Tools/ZERT/: CMakeLists.txt  Enum.h  Main.cpp  Parser.h  Type.cpp  Writer.h  ZERT.h
Sources/Tools/ZERT/Private/: Class.h  Main.cpp  Parser.cpp  Type.h  Writer.cpp
Sources/Tools/ZinoReflectionTool/: CMakeLists.txt
Sources/Tools/ZinoReflectionTool/Private/: Class.h  Enum.h  Header.cpp  Header.h  Parser.cpp  Parser.h  Struct.cpp  Struct.h  Writer.cpp  Writer.h  ZRT.h  main.cpp
Sources/editor/: CMakeLists.txt
Sources/editor/assetdatacache/: CMakeLists.txt
Sources/editor/editor/: CMakeLists.txt
Sources/editor/shadercompiler/: CMakeLists.txt
Sources/editor/texturecompressor/: CMakeLists.txt
Sources/editor/texturecompressor/private/: TextureCompressor.cpp
Sources/editor/vulkanshadercompiler/: CMakeLists.txt
Sources/editor/vulkanshadercompiler/private/: VulkanShaderCompiler.cpp
Sources/engine/: CMakeLists.txt
Sources/engine/asset/: CMakeLists.txt
Sources/engine/assetdatabase/: CMakeLists.txt
Sources/engine/core/: CMakeLists.txt
Sources/engine/core/private/: App.cpp  EngineCore.cpp  StringUtil.cpp
Sources/engine/core/public/: App.h  Assertions.h  EngineCore.h  EngineVer.h  MessageBox.h  MinimalMacros.h  NonCopyable.h  NonMoveable.h  Pool.h  StringUtil.h
Sources/engine/effect/: CMakeLists.txt
Sources/engine/engine/: CMakeLists.txt
Sources/engine/gfx/: CMakeLists.txt
Sources/engine/gfxbackend/: CMakeLists.txt
Sources/engine/gfxbackend/private/: BackendManager.cpp  GfxBackend.cpp
Sources/engine/imgui/: CMakeLists.txt
Sources/engine/imgui/public/: ImGuiConfigZE.h
Sources/engine/main/: CMakeLists.txt
Sources/engine/platform/: CMakeLists.txt
Sources/engine/platformwindows/: CMakeLists.txt
Sources/engine/reflection/: CMakeLists.txt
Sources/engine/shadercore/: CMakeLists.txt
Sources/engine/vulkangfx/: CMakeLists.txt
Sources/engine/zefs/: CMakeLists.txt
Sources/tools/: CMakeLists.txt
Sources/tools/zert/: CMakeLists.txt  Class.h  Header.h  Parser.cpp  Writer.cpp
(+1199 files in other folders)
