add_subdirectory(AssetDataCache)
add_subdirectory(AssetActions)
add_subdirectory(MapEditor)
add_subdirectory(AssetUtils)
add_subdirectory(ZEEditor)
add_subdirectory(PropertyEditor)
add_subdirectory(NotificationSystem)
add_subdirectory(TextureCompressor)
add_subdirectory(SDFFontGen)
add_subdirectory(QtAdvancedDockingSystem)