add_subdirectory(asset)
add_subdirectory(assetdatabase)
add_subdirectory(core)
add_subdirectory(reflection)
add_subdirectory(effect)
add_subdirectory(engine)
add_subdirectory(gfx)
add_subdirectory(main)
add_subdirectory(json)
add_subdirectory(imgui)
add_subdirectory(gfxbackend)
add_subdirectory(platform)
add_subdirectory(platformwindows)
add_subdirectory(shadercore)
#add_subdirectory(renderer)
add_subdirectory(vulkangfx)
add_subdirectory(zefs)
