add_library(editor 
    public/editor/ZEEditor.h
	public/editor/IconManager.h
	public/editor/LargeTask.h
	public/editor/PropertyEditor.h
	public/editor/PropertiesEditor.h
	public/editor/windows/MapEditor.h
	public/editor/windows/Window.h
	public/editor/windows/AssetExplorer.h
	public/editor/windows/Viewport.h
	public/editor/windows/EntityList.h
	public/editor/windows/EntityProperties.h
	public/editor/windows/Tools.h
	public/editor/assets/AssetActions.h
	public/editor/assets/AssetFactory.h
	public/editor/assets/TextureActions.h
	public/editor/assets/TextureCooker.h
	public/editor/windows/assets/texture/TextureEditor.h
	private/editor/assets/factories/AssetFactory.cpp
	private/editor/assets/actions/TextureActions.cpp
	private/editor/assets/actions/AssetActions.cpp
	private/editor/assets/actions/ModelActions.cpp
	private/editor/assets/factories/StbTextureFactory.cpp
	private/editor/assets/factories/TinyObjFactory.cpp
	private/editor/assets/TextureCooker.cpp
	private/editor/propertyeditors/PrimitivesPropertyEditors.h
	private/editor/propertyeditors/PrimitivesPropertyEditors.cpp
	private/editor/windows/MapEditor.cpp
	private/editor/windows/Window.cpp
	private/editor/windows/AssetExplorer.cpp
	private/editor/windows/Viewport.cpp
	private/editor/windows/EntityList.cpp
	private/editor/windows/EntityProperties.cpp
	private/editor/windows/Tools.cpp
	private/editor/windows/Console.cpp
	private/editor/windows/assets/texture/TextureEditor.cpp
	private/editor/PropertiesEditor.cpp
	private/editor/IconManager.cpp
	private/editor/PropertyEditor.cpp
	private/editor/LargeTask.cpp
	private/editor/ZEEditor.cpp)

target_link_libraries(editor
	PUBLIC
		core
		shadercore
		engine
		reflection
		imgui
		assetdatabase
	PRIVATE
		assetutils
		assetdatacache
		texturecompressor
		SDL2)
target_include_directories(editor
    PUBLIC 
        ${CMAKE_CURRENT_SOURCE_DIR}/public
        ${ZE_LIBS_DIR}/tinyobjloader
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/private)